v0.16
[REFACTOR] : Add support for sub folder installation

v0.15
[REFACTOR] : Adapt pathes structure to 4.1.0

v0.14
[REFACTOR] : Remove some files already present in Automne 4.0.2

v0.13
[BUG] : Correct a bug when try to force a browser value with url parameters

v0.12
[BUG] : Correct a bug on returned boolean values
[BUG] : Correct a bug on tags documentation

v0.11
[BUG] : Add a check to avoid XSS attack accross datas URL
[FEATURE] : Add module tag explanation for templates and rows

v0.1
First module release